--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <a href="#">Back to top</a>
       </p>
       <p class="mb-1">보스와 전투, 스킬 등의 시스템 기획자가 되고 싶은 지망생 김상웅입니다.</p>
-      <p class="mb-0"><a href="https://atentsgame.com">아텐츠게임아카데미</a> </p>
+      <p class="mb-0"><a href="https://ksw0913.notion.site/Save-hope-26a6c94c1f95474c87de779639dd9f18">Notion</a> </p>
     </div>
   </footer>
 
