--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   <meta property="og:site_name" content="KSW GDD PRACTICE." />
   <meta property="og:title" content="KSW GDD PRACTICE." />
   <meta property="og:description" content="게임 기획을 공부하는 기획자 지망생 김상웅의 사이트입니다." />
-  <meta property="og:image" content="images/main.PNG" />
+  <meta property="og:image" content="https://kswgdd.netlify.app/images/main.PNG" />
   <meta property="og:url" content="https://kswgdd.netlify.app/" />
 
   <meta property="twitter:card" content="summary" />
   <meta property="twitter:site" content="KSW GDD PRACTICE." />
   <meta property="twitter:title" content="KSW GDD PRACTICE." />
   <meta property="twitter:description" content="게임 기획을 공부하는 기획자 지망생 김상웅의 사이트입니다." />
-  <meta property="twitter:image" content="images/main.PNG" />
+  <meta property="twitter:image" content="https://kswgdd.netlify.app/images/main.PNG" />
   <meta property="twitter:url" content="https://kswgdd.netlify.app/" />
 
   <link rel="icon" href="./images/favicon.ico" />
