데미안추가

--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
           <h1 class="fw-light">연습장</h1>
           <p class="lead text-muted">한걸음 한걸음 매일 매일 조금씩 꾸준하게 마치 수도하는 수도승처럼 생각하고 검증하고 정리하여 기획서를 작성하고 다듬고 있습니다.</p>
           <p>
-            <a href="https://atentsgame.com/" class="btn btn-primary my-2">나의 시작</a>
-            <a href="https://google.com" class="btn btn-dark my-2">내 관심 사이트</a>
+            <a href="https://kswgdd.netlify.app/" class="btn btn-primary my-2">나의 시작</a>
+            <a href="https://atentsgame.com/landing.do" class="btn btn-dark my-2">내 관심 사이트</a>
           </p>
         </div>
       </div>
@@ -147,7 +147,7 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
           <div class="col">
             <div class="card shadow-sm" width="100%">
-              <img src="/images/colony.png" class="card-img-top" alt="요정">
+              <img src="/images/colony.png" class="card-img-top" alt="콜로니런">
               <div class="card-body">
                 <h5 class="card-title">ColonyRun LDD</h5>
                 <p class="card-text">숄더뷰 글로브 스타일의 러닝 액션 게임 ColonyRun의 레벨 디자인 문서입니다.</p>
@@ -158,11 +158,22 @@
           
           <div class="col">
             <div class="card shadow-sm" width="100%">
-              <img src="/images/main.PNG" class="card-img-top" alt="요정">
+              <img src="/images/main.PNG" class="card-img-top" alt="세이브호프">
               <div class="card-body">
                 <h5 class="card-title">SaveHope GDD</h5>
                 <p class="card-text">2D 사이드뷰 로그라이트 액션 게임 Save Hope의 게임 디자인 문서입니다.</p>
                 <a href="https://www.notion.so/ksw0913/Save-hope-26a6c94c1f95474c87de779639dd9f18" class="btn btn-warning">문서보기</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm" width="100%">
+              <img src="/images/maple.PNG" class="card-img-top" alt="데미안">
+              <div class="card-body">
+                <h5 class="card-title">Demian Stigma Pattern Design Document</h5>
+                <p class="card-text">넥슨의 메이플스토리에 등장하는 보스 데미안의 낙인 패턴 분석 문서입니다.</p>
+                <a href="./KSW_PORTFOLIO/pattern.pdf" class="btn btn-warning">문서보기</a>
               </div>
             </div>
           </div>
