--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <div class="card shadow-sm" width="100%">
               <img src="/images/main.PNG" class="card-img-top" alt="스페스">
               <div class="card-body">
-                <h5 class="card-title">SaveHope GDD</h5>
+                <h5 class="card-title">Spes GDD</h5>
                 <p class="card-text">2D 사이드뷰 로그라이트 액션 게임 Spes의 게임 디자인 문서입니다.</p>
                 <a href="https://ksw0913.notion.site/Spes-26a6c94c1f95474c87de779639dd9f18" class="btn btn-warning">문서보기</a>
               </div>
