--- a/index.html
+++ b/index.html
@@ -96,11 +96,10 @@
         <div class="row">
           <div class="col-sm-8 col-md-7 py-4">
             <h4 class="text-white">안녕하세요!</h4>
-            <p class="text-muted">저는 게임기획자의 꿈을 꾸는 아직은 배울 게 많은 꼬꼬마기획자입니다. 레벨디자이너를 주 포지션으로 생각하고 오늘도 열심히 터레인을 다듬고 로우폴리곤 셋팅을
-              하면서 제가 만든 맵을 테스트하고 스스로 피드백을 합니다.</p>
+            <p class="text-muted">저는 게임기획자 지망생 김상웅입니다. 최종적으로는 전투나 스킬, 밸런스등의 시스템 기획자가 되는 것이 목표입니다. 미래를 위해 열심히 공부중입니다.</p>
           </div>
           <div class="col-sm-4 offset-md-1 py-4">
-            <h4 class="text-white">Click here!</h4>
+            <h4 class="text-white">정보</h4>
             <ul class="list-unstyled">
               <li><a href="#" class="text-white">010-3287-4679</a></li>
               <li><a href="#" class="text-white">서울시 광진구 화양동</a></li>
@@ -132,11 +131,11 @@
     <section class="py-5 text-center container">
       <div class="row py-lg-5">
         <div class="col-lg-6 col-md-8 mx-auto">
-          <h1 class="fw-light">연습장</h1>
-          <p class="lead text-muted">한걸음 한걸음 매일 매일 조금씩 꾸준하게 마치 수도하는 수도승처럼 생각하고 검증하고 정리하여 기획서를 작성하고 다듬고 있습니다.</p>
+          <h1 class="fw-light">새로 만드는 기획서</h1>
+          <p class="lead text-muted">유니티 배워서 출시까지 해보자!</p>
           <p>
-            <a href="https://kswgdd.netlify.app/" class="btn btn-primary my-2">나의 시작</a>
-            <a href="https://atentsgame.com/landing.do" class="btn btn-dark my-2">내 관심 사이트</a>
+            <a href="https://ksw0913.notion.site/168b9d01409448d6869c7d48ae1f6953" class="btn btn-primary my-2">노션 메인 페이지</a>
+            <a href="https://ko.wikipedia.org/wiki/%EB%AF%B8%EC%95%BC%EB%AA%A8%ED%86%A0_%EC%8B%9C%EA%B2%8C%EB%A3%A8" class="btn btn-dark my-2">롤모델</a>
           </p>
         </div>
       </div>
@@ -180,10 +179,9 @@
   <footer class="text-muted py-5">
     <div class="container">
       <p class="float-end mb-1">
-        <a href="#">Back to top</a>
+        <a href="#">맨 위로</a>
       </p>
-      <p class="mb-1">보스와 전투, 스킬 등의 시스템 기획자가 되고 싶은 지망생 김상웅입니다.</p>
-      <p class="mb-0"><a href="https://ksw0913.notion.site/168b9d01409448d6869c7d48ae1f6953">Notion</a> </p>
+      <p class="mb-1">게임 기획자 지망생 김상웅의 사이트</p>
     </div>
   </footer>
 
