템플릿작성

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <h1 class="fw-light">새로 만드는 기획서</h1>
           <p class="lead text-muted">유니티 배워서 출시까지 해보자!</p>
           <p>
-            <a href="https://ksw0913.notion.site/168b9d01409448d6869c7d48ae1f6953" class="btn btn-primary my-2">노션 메인 페이지</a>
+            <a href="https://www.notion.so/ksw0913/Aspiring-Game-Designer-cc85399aaa114cdeb16ab71aa75e5c71?pvs=4" class="btn btn-primary my-2">노션 메인 페이지</a>
             <a href="https://ko.wikipedia.org/wiki/%EB%AF%B8%EC%95%BC%EB%AA%A8%ED%86%A0_%EC%8B%9C%EA%B2%8C%EB%A3%A8" class="btn btn-dark my-2">롤모델</a>
           </p>
         </div>
